repaired index.html => index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-10">
-                <a href="./00_dice_game/index-START.html"></a>
+                <a href="./00_dice_game/index.html"></a>
                 <div class="flexboxy-item-image dice_game">
 
                 </div>
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-10">
-                <a href="./11_guess_number/index-START.html"></a>
+                <a href="./11_guess_number/index.html"></a>
                 <div class="flexboxy-item-image guess_number">
 
                 </div>
