only profile picture missing!

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li class="ul-item"><a class="navbar-brand" href="#contact">Contact</a></li>
         </ul>
     </nav>
+    
     <div class="content">
         <div class="flexbox-container">
             <div class="flexbox-item flexbox-item-1">
@@ -44,28 +45,18 @@
                 <img src="./image.jpeg">
             </div>
         </div>
+        <hr>
 
         <div class="about-me" id="about_me">
             <div class="flexboxy-heading">
                 <h1 class="about-me-heading">About me</h1>
             </div>
             <div class="about-me-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio recusandae necessitatibus, natus quam
-                    eius quis similique eligendi accusantium? Error officiis possimus, obcaecati, magnam ipsum
-                    voluptatem saepe quis quia ratione nam consequuntur eligendi, nesciunt magni. Veritatis itaque quia,
-                    ipsam vitae molestiae rem quo est ab delectus suscipit animi ex autem voluptatibus dolorum deserunt
-                    placeat error illum eius vel natus atque porro. Id optio quam qui eius molestias mollitia deserunt
-                    neque sint ullam doloremque voluptas, ratione ex error, voluptatum a ipsam in maxime veritatis ut
-                    veniam odit nisi totam labore obcaecati. Sapiente iure magnam animi delectus voluptates repellat,
-                    numquam dolorum consequatur esse consequuntur optio corporis dolor, explicabo adipisci, est nisi
-                    molestiae. Corporis nesciunt, odit ad veritatis, vero at repellendus quis eum cumque deleniti
-                    reprehenderit quasi laudantium dignissimos! Veniam accusantium saepe nesciunt blanditiis totam nulla
-                    provident voluptatum facilis perspiciatis in odit et dolorum placeat tenetur vitae obcaecati,
-                    consequuntur exercitationem labore quis atque aspernatur! Quis ipsam, dicta modi mollitia maxime,
-                    eos cupiditate dolor accusamus fuga itaque inventore quibusdam neque ea eligendi voluptate error
-                    dolore quod, cumque ab velit odio debitis asperiores sequi? Provident soluta doloribus optio
-                    repudiandae blanditiis corrupti, maiores animi deleniti veritatis alias omnis odit repellat labore
-                    dolor! Alias facere cum neque commodi.</p>
+                <div class="develop image">
+                    <div class="slika"></div>
+                </div>
+                <div class="develop text"> <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et deserunt ea sapiente eum natus odio ullam labore ipsa similique alias unde libero explicabo, facilis atque quo dolor impedit magni voluptate iusto consequuntur a veniam tenetur. Laborum, quaerat maxime modi dolore eveniet, minima magnam assumenda autem eum fugiat deleniti debitis temporibus provident! Ea vitae possimus blanditiis eveniet ab ipsam, consectetur ex incidunt! Quod tempore deleniti cum cupiditate perferendis cumque unde molestiae vitae! Minima modi provident accusamus enim ipsam rem excepturi iure blanditiis ullam, nam pariatur aliquid cupiditate alias repellendus libero amet porro labore impedit iusto? Earum eos dolor sint sit voluptatum, ea quam maiores eveniet soluta optio laudantium doloribus, aperiam debitis minima saepe temporibus autem dolorum distinctio consectetur totam sunt harum animi. Eaque necessitatibus eligendi, voluptates temporibus dicta accusantium aperiam harum atque perferendis eum delectus quas, quasi at numquam ad ullam, vitae unde soluta sequi officiis minima. Officiis enim culpa sapiente. Perferendis aliquam maxime minus esse magnam aspernatur? Quos incidunt ipsa accusamus nobis aut modi temporibus adipisci ipsum voluptatibus nemo accusantium quidem autem ab, natus officiis debitis quo sint dolor ducimus praesentium alias! Numquam in suscipit a harum nemo aliquam vero eaque, ratione totam, est tempora illo inventore ab beatae voluptas.</p>
+                </div>
             </div>
 
         </div>
@@ -75,7 +66,7 @@
                 <h1 class="my-work-heading">My work</h1>
             </div>
             <div class="flexboxy-item flexboxy-item-10">
-                <a href="https://benndzamin.github.io/"></a>
+                <a href="https://benndzamin.github.io/" target="_blank"></a>
                 <div class="flexboxy-item-image local_crud">
 
                 </div>
@@ -84,7 +75,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-1">
-                <a href="./01_drum_kit/index-START.html"></a>
+                <a href="./01_drum_kit/index-START.html" target="_blank"></a>
                 <div class="flexboxy-item-image drum_kit">
                 </div>
                 <div class="flexboxy-item-footer">
@@ -92,7 +83,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-10">
-                <a href="./00_dice_game/index.html"></a>
+                <a href="./00_dice_game/index.html" target="_blank"></a>
                 <div class="flexboxy-item-image dice_game">
 
                 </div>
@@ -101,7 +92,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-2">
-                <a href="./02_clock/index-START.html"></a>
+                <a href="./02_clock/index-START.html" target="_blank"></a>
                 <div class="flexboxy-item-image clock">
                 </div>
                 <div class="flexboxy-item-footer">
@@ -109,7 +100,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-3">
-                <a href="./03_flex_galery/index-START.html"></a>
+                <a href="./03_flex_galery/index-START.html" target="_blank"></a>
                 <div class="flexboxy-item-image flex_galery">
                 </div>
                 <div class="flexboxy-item-footer">
@@ -117,7 +108,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-4">
-                <a href="./04_type_ahead/index-START.html"></a>
+                <a href="./04_type_ahead/index-START.html" target="_blank"></a>
                 <div class="flexboxy-item-image type_ahead">
 
                 </div>
@@ -126,7 +117,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-5">
-                <a href="./05_canvas_fun/index-START.html"></a>
+                <a href="./05_canvas_fun/index-START.html" target="_blank"></a>
                 <div class="flexboxy-item-image canvas_fun">
 
                 </div>
@@ -135,7 +126,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-6">
-                <a href="./06_localstorage/index-START.html"></a>
+                <a href="./06_localstorage/index-START.html" target="_blank"></a>
                 <div class="flexboxy-item-image localstorage">
 
                 </div>
@@ -144,7 +135,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-7">
-                <a href="./07_speech_detection/index-START.html"></a>
+                <a href="./07_speech_detection/index-START.html" target="_blank"></a>
                 <div class="flexboxy-item-image speech_detection">
 
                 </div>
@@ -153,7 +144,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-8">
-                <a href="./08_speech_synthesis/index-START.html"></a>
+                <a href="./08_speech_synthesis/index-START.html" target="_blank"></a>
                 <div class="flexboxy-item-image speech_synthesis">
 
                 </div>
@@ -162,7 +153,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-9">
-                <a href="./09_countdown_timer/index.html"></a>
+                <a href="./09_countdown_timer/index.html" target="_blank"></a>
                 <div class="flexboxy-item-image countdown_timer">
 
                 </div>
@@ -171,7 +162,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-10">
-                <a href="./10_whack_mole/index-START.html"></a>
+                <a href="./10_whack_mole/index-START.html" target="_blank"></a>
                 <div class="flexboxy-item-image whack_mole">
 
                 </div>
@@ -180,7 +171,7 @@
                 </div>
             </div>
             <div class="flexboxy-item flexboxy-item-10">
-                <a href="./11_guess_number/index.html"></a>
+                <a href="./11_guess_number/index.html" target="_blank"></a>
                 <div class="flexboxy-item-image guess_number">
 
                 </div>
@@ -190,13 +181,28 @@
             </div>
         </div>
 
-        <div class="contact-me" id="contact">
+        <div class="contact-me-cont" id="contact">
             <div class="flexboxy-heading">
                 <h1 class="contact-me-heading">Contact me</h1>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla dolorem placeat eum perferendis
-                doloremque itaque dicta, quis, illo vel, quasi nihil corrupti fugiat non voluptates quae dolore
-                architecto delectus.</p>
+            <div class="contact-me">
+                <div class="contact-item email" onclick="location.href='mailto:mujka_benjo@hotmail.com'">
+                    <img src="./email.png"><br>
+                    <a href="mailto: abc@example.com">mujka_benjo@hotmail.com</a>
+                </div>
+                <div class="contact-item phone">
+                    <img src="./phone.png"><br>
+                    <span>+38761/419-954</span>
+                </div>
+                <div class="contact-item linkedin" onclick="location.href='https://www.linkedin.com/in/mkbenjamin/';">
+                    <img src="./linkedin.png"><br>
+                    <span>linkedin.com/in/mkbenjamin</span>
+                </div>
+                <div class="contact-item github" onclick="location.href='https://github.com/benndzamin';">
+                    <img src="./github.png"><br>
+                    <span>github.com/benndzamin</span>
+                </div>
+            </div>
         </div>
     </div>
     <script src="./script.js"></script>
