--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="div-2">
                         <p>CSS / JavaScript / React</p><br><br><br><br>
                     </div>
-                    <div class="contact div-3">
+                    <div class="contact div-3" onclick="location.href='#contact'">
                         <h3>contact me</h2>
                     </div>
                 </div>
