--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="flexbox-item flexbox-item-2">
-                <img src="./image.jpeg">
+                <img src="./ben.jpg">
             </div>
         </div>
         <hr>
