--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="flexbox-item flexbox-item-2">
-                <img src="./ben.jpg" alt="no image!">
+                <img src="./benn.jpg" alt="no image!">
             </div>
         </div>
         <hr>
